[gd_scene load_steps=6 format=3 uid="uid://bc4k82h455ix2"]

[ext_resource type="Theme" uid="uid://cyua45ur0ijqo" path="res://assets/Main.theme" id="1_u4t67"]
[ext_resource type="Script" path="res://components/Table/TableItems/RowHeadder.gd" id="2_mlime"]
[ext_resource type="Texture2D" uid="uid://bqdebneaw8anq" path="res://assets/icons/ResizeAlt.svg" id="3_ed8iy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3xnfy"]
draw_center = false
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0.435294, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_27hjk"]

[node name="RowIndex" type="PanelContainer"]
custom_minimum_size = Vector2(0, 50)
offset_right = 223.0
offset_bottom = 50.0
size_flags_horizontal = 3
theme = ExtResource("1_u4t67")
script = ExtResource("2_mlime")

[node name="Selection" type="Control" parent="."]
visible = false
layout_mode = 2

[node name="Selection" type="Panel" parent="Selection"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -5.0
offset_top = -5.0
offset_right = 5.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3xnfy")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Handle" type="TextureRect" parent="HBoxContainer"]
visible = false
modulate = Color(0.255659, 0.255659, 0.255659, 1)
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 13
texture = ExtResource("3_ed8iy")
expand_mode = 4
stretch_mode = 5

[node name="Label" type="LineEdit" parent="HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_uneditable_color = Color(0.87451, 0.87451, 0.87451, 1)
editable = false
select_all_on_focus = true

[node name="NameButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_27hjk")
flat = true
alignment = 0
text_overrun_behavior = 3

[connection signal="focus_exited" from="HBoxContainer/Label" to="." method="_on_label_focus_exited"]
[connection signal="text_submitted" from="HBoxContainer/Label" to="." method="_on_label_text_submitted"]
[connection signal="gui_input" from="HBoxContainer/NameButton" to="." method="_on_name_button_gui_input"]
